--- a/app/scripts/modules/core/src/pipeline/config/parameters/parameter.html
+++ b/app/scripts/modules/core/src/pipeline/config/parameters/parameter.html
@@ -39,7 +39,7 @@
           </label>
         </div>
       </stage-config-field>
-      <stage-config-field label="Always show" help-key="pipeline.config.parameter.alwaysShow">
+      <stage-config-field label="Pin Parameter" help-key="pipeline.config.parameter.alwaysShow">
         <div class="checkbox">
           <label>
             <input type="checkbox" ng-model="parameter.alwaysShowing" />
