--- a/app/scripts/modules/core/src/pipeline/config/parameters/parameter.html
+++ b/app/scripts/modules/core/src/pipeline/config/parameters/parameter.html
@@ -39,10 +39,10 @@
           </label>
         </div>
       </stage-config-field>
-      <stage-config-field label="Pin Parameter" help-key="pipeline.config.parameter.alwaysShow">
+      <stage-config-field label="Pin Parameter" help-key="pipeline.config.parameter.pinned">
         <div class="checkbox">
           <label>
-            <input type="checkbox" ng-model="parameter.alwaysShowing" />
+            <input type="checkbox" ng-model="parameter.pinned" />
           </label>
         </div>
       </stage-config-field>
